# program-upgrade-guardian-skill

./: Anchor.toml  Cargo.toml  LICENSE  MIT license  README.md  SKILL.md  SKILLS_INDEX.md  commands-upgrade-commands.md  docs-program-lifecycle.md  env (1).example  fix-repo.sh  github-workflows-idl-check.yml  idl-check (1).yml  idl-check (2).ts  install.py  install.sh  package.json  program-lifecycle.md  test_borsh_layout.rs  tests-ci-layout-drift.ts  tests-devnet-verify-devnet.sh  tests-integration-test_fork_upgrade.rs  tests-unit-test_migration_append.rs  tests-unit-test_migration_resize.rs  tests-upgrade-test-suite.md  upgrade-test-suite (2).md  upgrade-test-suite.md
.chatgpt/skills/program-upgrade-guardian/: SKILL.md
.claude/skills/program-upgrade-guardian/: SKILL.md
.codex/skills/program-upgrade-guardian/: SKILL.md
.cursor/skills/program-upgrade-guardian/: SKILL.md
.deepseek/skills/program-upgrade-guardian/: SKILL.md
.gemini/skills/program-upgrade-guardian/: SKILL.md
.github/skills/program-upgrade-guardian/: SKILL.md
.windsurf/skills/program-upgrade-guardian/: SKILL.md
agents/: guardian-agent.md
app/: client.ts
commands/: discovery.sh  upgrade-commands.md
docs/: incident-response.md  program-lifecycle.md
programs/demo_program/: Cargo.toml
programs/demo_program/src/: lib.rs
programs/demo_program/tests/: test_migration.rs
rules/: safety-rules.md
templates/: migration-template.rs
tests/ci/: idl-check.ts
tests/devnet/: deploy-devnet.sh
tests/integration/: test_multisig_flow.rs
tests/unit/: test_borsh_layout.rs
